<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Where are you</string>
    <string name="maps_api_key" translatable="false">AIzaSyA6V_KqfK_rg9VuZYW5LvSBxRE4LQYkVJ0</string>
    <string name="dialog_name_title">Hello stranger!\nWhat\'s your name?</string>
    <string name="hint_username">Name that appears on the map</string>
    <string name="share_position">Share my position</string>
    <string name="preferences_menu">Settings</string>
    <string name="preferences_title">General preferences</string>
    <string name="preferences_name_dialog">Enter your name</string>
    <string name="preferences_name_summary">The name used to show your position</string>
    <string name="preferences_name_title">Your name</string>
    <string name="about_menu">About</string>
    <string name="about_title">Where are you v%s</string>
    <string name="about_text">Jonas Schmid &#169; 2013</string>
    <string name="about_mail">Email</string>
    <string name="about_twitter">Twitter</string>
    <string name="about_gplus">Google Plus</string>
    <string name="about_activity">About \"Where are you\"</string>
    <string name="about_my_email">jonas@schmid.pro</string>
    <string name="about_my_email_subject">Contact about \"Where are you\"</string>
    <string name="about_my_twitter">http://www.twitter.com/jonas_schmid</string>
    <string name="about_my_gplus">http://plus.google.com/114560018851378206870</string>
    <string name="about_send_email_with">Send email with&#8230;</string>
    <string name="tutorial_title">We got your position!</string>
    <string name="tutorial_text">You can now open the menu and share your position with your friends using your favorite IM app. Then come back here to see their position!</string>
    <string name="share_text">Where are you? I am here: %s</string>
    <string name="offline_alert_title">Your device is offline</string>
    <string name="offline_alert_text">This application needs to be online to share your location with your friends. Please enable wifi or 3G and come back.</string>

</resources>